# fastapply-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/fastapply_mcp/: main.py
