[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "fastapply_mcp"
version = "1.1"
description = "MCP server for AI-powered code editing through FastApply integration"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "tickernelz"}
]
keywords = ["mcp", "fastapply", "code-editing", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "mcp[cli]>=1.14.1",
    "openai>=1.108.0",
    "structlog>=25.4.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.13.1",
    "mypy>=1.18.2",
]

[project.scripts]
fastapply_mcp = "fastapply_mcp.main:main"

[tool.ruff]
line-length = 140
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
